# study-spiffworkflow

./: 1_1_snapshot.json  1_snapshot.json  Dockerfile  Makefile  api_server.py  fastapi_app.py  init_db.py  main.py  pyproject.toml  trigger_new_workflow.py
api/: __init__.py
api/auth/: __init__.py  router.py  schema.py  views.py
api/bpm_workflow/: __init__.py  bpmn_runner.py  router.py  schema.py  workflow.py
configs/: __init__.py  environment.py
connections/: __init__.py  mongo_db.py
core/: __init__.py  custom_serializer.py  node_manager.py  runner.py  storage.py
core/service_tasks/: __init__.py  base.py  manager.py  sleep_task.py
data/: 1.xml
models/: __init__.py  initializer.py  workflow_config.py  workflow_instance.py
tiq_tasks/: say_hello.py  workflow_task.py
worker/: __init__.py  broker.py  result_backend.py
workflow/: __init__.py  runner.py  serializer.py
workflow/runner_mixins/: __init__.py  parser.py  serializer.py  task.py  user_manual_trigger.py
workflow/storage/: __init__.py  base.py  file.py  mongo.py
