[project]
name = "loadtestem"
version = "0.1.0"
description = ""
authors = [
    {name = "NhanDD",email = "hp.duongducnhan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spiffworkflow (>=3.1.2,<4.0.0)"
]

[tool.poetry]
packages = []
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
