[project]
name = "loadtestem"
version = "0.1.0"
description = ""
authors = [
    {name = "NhanDD",email = "hp.duongducnhan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "spiffworkflow (>=3.1.2,<4.0.0)",
    "marshmallow (==3.23.1)",
    "umongo (>=3.1.0,<4.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "xmltodict (>=1.0.2,<2.0.0)"
]

[tool.poetry]
packages = []
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
